--- a/MiniProject5.WebAPI/appsettings.json
+++ b/MiniProject5.WebAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost; database=HRIS; username=postgres; password=admin"
+  },
+  "JWT": {
+    "Issuer": "http://localhost:7284",
+    "Audience": "http://localhost:7284",
+    "SigningKey": "OnePiece1111122222333334444455555"
   }
 }
