--- a/MiniProject5.WebAPI/appsettings.json
+++ b/MiniProject5.WebAPI/appsettings.json
@@ -13,5 +13,15 @@
     "Issuer": "http://localhost:7284",
     "Audience": "http://localhost:7284",
     "SigningKey": "OnePiece1111122222333334444455555"
+  },
+  "MailSettings": {
+    "Host": "smtp.gmail.com",
+    "DefaultCredentials": false,
+    "Port": 465,
+    "Name": "Human Resource Information System",
+    "EmailId": "deniprasetyo2210@gmail.com",
+    "UserName": "deniprasetyo2210",
+    "Password": "gwtl mevb lrsg kaje",
+    "UseSSL": true
   }
 }
