--- a/MiniProject5.Persistence/MiniProject8.Persistence.csproj
+++ b/MiniProject5.Persistence/MiniProject8.Persistence.csproj
@@ -29,4 +29,8 @@
     <ProjectReference Include="..\MiniProject5.Domain\MiniProject8.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
